<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vinclu sample</string>
    <string name="action_settings">Settings</string>
    <string name="title_vicle_sample">Vinclu sample for Android</string>
    <string name="label_lightning">点灯</string>
    <string name="label_blinking">点滅</string>
    <string name="label_violently_blinking">激しく点滅</string>
    <string name="label_stop">停止</string>

</resources>
